# wordbook-app

./: .gitignore  Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  startup.sh  tailwind.config.js  vite.config.ts  生词表布局.pptx
.github/workflows/: backend.yml  deploy.yml  docker-build.yml  frontend.yml
src/: App.tsx  index.css  main.tsx
src-backend/: README.md  db.py  main.py  pyproject.toml  schema.sql  search.py
src-backend/db/: __init__.py
src/api/: axios.ts
src/components/: NotebookDetail.tsx
