[tool.poetry]
name = "wordbook"
version = "0.1.0"
description = ""
authors = ["dream-oyh <1399541701@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["standard"], version = "^0.115.8"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
